--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <title>Portfolio Zeta Labs</title>
+    <title>Portfolio Eduardo Zamorano Orrego</title>
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -36,9 +36,9 @@
         <div class="container">     
 	        <div class="row align-items-center">
 			    <div class="col">         
-		            <img class="profile-image img-fluid float-start rounded-circle" src="assets/images/profile.png" alt="profile image"  />
+		            <img class="profile-image img-fluid float-start rounded-circle" src="assets/images/profile.jpeg" alt="profile image"  />
 		            <div class="profile-content">
-		                <h1 class="name">Sispro Ingeniería</h1>
+		                <h1 class="name">Eduardo Zamorano Orrego</h1>
 		                <h2 class="desc">Software Developer</h2>   
 		                <ul class="social list-inline">
 		                    <li class="list-inline-item"><a href="#"><i class="fab fa-twitter"></i></a></li>
@@ -69,7 +69,7 @@
                     <div class="section-inner shadow-sm rounded">
                         <h2 class="heading">Acerca de</h2>
                         <div class="content">
-                            <p>Sispro Ingeniería es el producto de un equipo humano de ingenieros que les apasiona el mundo del software y que entregan desarrollos de calidad a medida para sus clientes.</p>
+                            <p>Entusiasta Scrum, Lean, Management 3.0. Ingeniero Civil Informático. Magister en Dirección de Empresas (MBA). Consultor en Tecnología y Negocios.</p>
                          
                         </div><!--//content-->
                     </div><!--//section-inner-->                 
@@ -228,8 +228,8 @@
                         <div class="content">
                             <ul class="list-unstyled">
                                 <li><i class="fas fa-map-marker-alt"></i><span class="sr-only">Location:</span>Chile</li>
-                                <li><i class="fas fa-envelope"></i><span class="sr-only">Email:</span><a href="#">sisprocl@gmail.com</a></li>
-                                <li><i class="fas fa-link"></i><span class="sr-only">Website:</span><a href="#">https://sisprocl.github.io</a></li>
+                                <li><i class="fas fa-envelope"></i><span class="sr-only">Email:</span><a href="#">contacto@ezamorano.cl</a></li>
+                                <li><i class="fas fa-link"></i><span class="sr-only">Website:</span><a href="#">https://web.ezamorano.cl</a></li>
                             </ul>
                         </div><!--//content-->  
                     </div><!--//section-inner-->                 
